// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article active rendering should render active correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "padding": 16,
      },
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "opacity": 1,
        }
      }
      testID="Article-Button-section"
    >
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flexDirection": "row",
            "height": 14,
          }
        }
      >
        <View
          style={
            Object {
              "flexBasis": "auto",
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#AAAAAA",
                "fontSize": 12,
                "fontWeight": "300",
                "paddingRight": 0,
              }
            }
            testID="Article-source-name"
          >
            www.google.nl
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexBasis": "auto",
            "flexGrow": 0,
            "marginBottom": 6,
            "marginTop": 6,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={3}
          style={
            Object {
              "color": "#000000",
              "fontSize": 17,
              "fontWeight": "600",
              "lineHeight": 21,
            }
          }
          testID="Article-title"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flex": 1,
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexGrow": 0,
            "flexShrink": 1,
            "height": 14,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "width": 35,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-PlayIcon-Icon-playable"
          >
            
          </Text>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-icon-downloaded"
          >
            
          </Text>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-icon-favorited"
          >
            
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#AAAAAA",
              "fontSize": 12,
              "fontWeight": "300",
              "paddingLeft": 2,
            }
          }
        >
          Added 
          less than a minute
           ago
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginLeft": 16,
          "marginTop": 4,
          "width": 75,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#C5C5C5",
            "borderRadius": 4,
            "height": 75,
            "justifyContent": "center",
            "opacity": 1,
            "width": 75,
          }
        }
        testID="Article-Button-play"
      >
        <View
          style={
            Object {
              "height": 32,
              "position": "absolute",
              "width": 32,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "borderRadius": 32,
                  "elevation": 1,
                  "height": 32,
                  "justifyContent": "center",
                  "shadowColor": "#000000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.2,
                  "shadowRadius": 1,
                  "width": 32,
                },
                Object {
                  "backgroundColor": "#037DE2",
                },
              ]
            }
            testID="Article-PlayIcon-view"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#fff",
                    "fontSize": 11,
                  },
                  Object {
                    "marginLeft": 2,
                  },
                  Object {
                    "fontFamily": "FontAwesome5Free-Solid",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "900",
                  },
                ]
              }
              testID="Article-PlayIcon-Icon-play"
            >
              
            </Text>
          </View>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#AAAAAA",
            "fontSize": 12,
            "fontWeight": "300",
            "marginTop": 6,
            "textAlign": "center",
          }
        }
        testID="Article-duration"
      >
        ? min.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Article downloaded rendering should render downloaded correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "padding": 16,
      },
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "opacity": 1,
        }
      }
      testID="Article-Button-section"
    >
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flexDirection": "row",
            "height": 14,
          }
        }
      >
        <View
          style={
            Object {
              "flexBasis": "auto",
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#AAAAAA",
                "fontSize": 12,
                "fontWeight": "300",
                "paddingRight": 0,
              }
            }
            testID="Article-source-name"
          >
            www.google.nl
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexBasis": "auto",
            "flexGrow": 0,
            "marginBottom": 6,
            "marginTop": 6,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={3}
          style={
            Object {
              "color": "#000000",
              "fontSize": 17,
              "fontWeight": "600",
              "lineHeight": 21,
            }
          }
          testID="Article-title"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flex": 1,
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexGrow": 0,
            "flexShrink": 1,
            "height": 14,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "width": 35,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-PlayIcon-Icon-playable"
          >
            
          </Text>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#03A87C",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-icon-downloaded"
          >
            
          </Text>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-icon-favorited"
          >
            
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#AAAAAA",
              "fontSize": 12,
              "fontWeight": "300",
              "paddingLeft": 2,
            }
          }
        >
          Added 
          less than a minute
           ago
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginLeft": 16,
          "marginTop": 4,
          "width": 75,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#C5C5C5",
            "borderRadius": 4,
            "height": 75,
            "justifyContent": "center",
            "opacity": 1,
            "width": 75,
          }
        }
        testID="Article-Button-play"
      >
        <View
          style={
            Object {
              "height": 32,
              "position": "absolute",
              "width": 32,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "borderRadius": 32,
                  "elevation": 1,
                  "height": 32,
                  "justifyContent": "center",
                  "shadowColor": "#000000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.2,
                  "shadowRadius": 1,
                  "width": 32,
                },
                null,
              ]
            }
            testID="Article-PlayIcon-view"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#000",
                    "fontSize": 11,
                  },
                  Object {
                    "marginLeft": 2,
                  },
                  Object {
                    "fontFamily": "FontAwesome5Free-Solid",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "900",
                  },
                ]
              }
              testID="Article-PlayIcon-Icon-play"
            >
              
            </Text>
          </View>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#AAAAAA",
            "fontSize": 12,
            "fontWeight": "300",
            "marginTop": 6,
            "textAlign": "center",
          }
        }
        testID="Article-duration"
      >
        ? min.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Article full rendering should render full correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "padding": 16,
      },
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "opacity": 1,
        }
      }
      testID="Article-Button-section"
    >
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flexDirection": "row",
            "height": 14,
          }
        }
      >
        <View
          style={
            Object {
              "flexBasis": "auto",
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#AAAAAA",
                "fontSize": 12,
                "fontWeight": "300",
                "paddingRight": 0,
              }
            }
            testID="Article-source-name"
          >
            Jordy on Test
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexBasis": "auto",
            "flexGrow": 0,
            "marginBottom": 6,
            "marginTop": 6,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={3}
          style={
            Object {
              "color": "#000000",
              "fontSize": 17,
              "fontWeight": "600",
              "lineHeight": 21,
            }
          }
          testID="Article-title"
        >
          Test title
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flex": 1,
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexGrow": 0,
            "flexShrink": 1,
            "height": 14,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "width": 35,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-PlayIcon-Icon-playable"
          >
            
          </Text>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-icon-downloaded"
          >
            
          </Text>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-icon-favorited"
          >
            
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#AAAAAA",
              "fontSize": 12,
              "fontWeight": "300",
              "paddingLeft": 2,
            }
          }
        >
          Added 
          less than a minute
           ago
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginLeft": 16,
          "marginTop": 4,
          "width": 75,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#C5C5C5",
            "borderRadius": 4,
            "height": 75,
            "justifyContent": "center",
            "opacity": 1,
            "width": 75,
          }
        }
        testID="Article-Button-play"
      >
        <View
          style={
            Object {
              "height": 32,
              "position": "absolute",
              "width": 32,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "borderRadius": 32,
                  "elevation": 1,
                  "height": 32,
                  "justifyContent": "center",
                  "shadowColor": "#000000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.2,
                  "shadowRadius": 1,
                  "width": 32,
                },
                null,
              ]
            }
            testID="Article-PlayIcon-view"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#000",
                    "fontSize": 11,
                  },
                  Object {
                    "marginLeft": 2,
                  },
                  Object {
                    "fontFamily": "FontAwesome5Free-Solid",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "900",
                  },
                ]
              }
              testID="Article-PlayIcon-Icon-play"
            >
              
            </Text>
          </View>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#AAAAAA",
            "fontSize": 12,
            "fontWeight": "300",
            "marginTop": 6,
            "textAlign": "center",
          }
        }
        testID="Article-duration"
      >
        2 min.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Article incompatibility warning render should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "padding": 16,
      },
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "opacity": 1,
        }
      }
      testID="Article-Button-section"
    >
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flexDirection": "row",
            "height": 14,
          }
        }
      >
        <View
          style={
            Object {
              "flexBasis": "auto",
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#AAAAAA",
                "fontSize": 12,
                "fontWeight": "300",
                "paddingRight": 0,
              }
            }
            testID="Article-source-name"
          >
            www.google.nl
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexBasis": "auto",
            "flexGrow": 0,
            "marginBottom": 6,
            "marginTop": 6,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={3}
          style={
            Object {
              "color": "#000000",
              "fontSize": 17,
              "fontWeight": "600",
              "lineHeight": 21,
            }
          }
          testID="Article-title"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flex": 1,
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexGrow": 0,
            "flexShrink": 1,
            "height": 14,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "width": 35,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-PlayIcon-Icon-playable"
          >
            
          </Text>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-icon-downloaded"
          >
            
          </Text>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-icon-favorited"
          >
            
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#AAAAAA",
              "fontSize": 12,
              "fontWeight": "300",
              "paddingLeft": 2,
            }
          }
        >
          Added 
          less than a minute
           ago
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginLeft": 16,
          "marginTop": 4,
          "width": 75,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#C5C5C5",
            "borderRadius": 4,
            "height": 75,
            "justifyContent": "center",
            "opacity": 1,
            "width": 75,
          }
        }
        testID="Article-Button-play"
      >
        <View
          style={
            Object {
              "height": 32,
              "position": "absolute",
              "width": 32,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "borderRadius": 32,
                  "elevation": 1,
                  "height": 32,
                  "justifyContent": "center",
                  "shadowColor": "#000000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.2,
                  "shadowRadius": 1,
                  "width": 32,
                },
                null,
              ]
            }
            testID="Article-PlayIcon-view"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#000",
                    "fontSize": 11,
                  },
                  Object {
                    "marginLeft": 2,
                  },
                  Object {
                    "fontFamily": "FontAwesome5Free-Solid",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "900",
                  },
                ]
              }
              testID="Article-PlayIcon-Icon-play"
            >
              
            </Text>
          </View>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#AAAAAA",
            "fontSize": 12,
            "fontWeight": "300",
            "marginTop": 6,
            "textAlign": "center",
          }
        }
        testID="Article-duration"
      >
        ? min.
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#ffc107",
        "borderRadius": 6,
        "marginTop": 16,
        "opacity": 1,
        "padding": 12,
      }
    }
    testID="Article-Button-incompatibility-warning"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        This article
      </Text>
      <Text
        style={
          Object {
            "fontStyle": "italic",
            "fontWeight": "600",
          }
        }
      >
         
        might
         
      </Text>
      <Text>
        not be compatible for listening.
      </Text>
    </View>
    <Text
      style={
        Object {
          "marginTop": 4,
          "textDecorationLine": "underline",
          "textDecorationStyle": "solid",
        }
      }
    >
      Learn more
    </Text>
  </View>
</View>
`;

exports[`Article loading rendering should render loading correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "padding": 16,
      },
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "opacity": 1,
        }
      }
      testID="Article-Button-section"
    >
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flexDirection": "row",
            "height": 14,
          }
        }
      >
        <View
          style={
            Object {
              "flexBasis": "auto",
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#AAAAAA",
                "fontSize": 12,
                "fontWeight": "300",
                "paddingRight": 0,
              }
            }
            testID="Article-source-name"
          >
            www.google.nl
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexBasis": "auto",
            "flexGrow": 0,
            "marginBottom": 6,
            "marginTop": 6,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={3}
          style={
            Object {
              "color": "#000000",
              "fontSize": 17,
              "fontWeight": "600",
              "lineHeight": 21,
            }
          }
          testID="Article-title"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flex": 1,
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexGrow": 0,
            "flexShrink": 1,
            "height": 14,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "width": 35,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-PlayIcon-Icon-playable"
          >
            
          </Text>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-icon-downloaded"
          >
            
          </Text>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-icon-favorited"
          >
            
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#AAAAAA",
              "fontSize": 12,
              "fontWeight": "300",
              "paddingLeft": 2,
            }
          }
        >
          Added 
          less than a minute
           ago
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginLeft": 16,
          "marginTop": 4,
          "width": 75,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#C5C5C5",
            "borderRadius": 4,
            "height": 75,
            "justifyContent": "center",
            "opacity": 1,
            "width": 75,
          }
        }
        testID="Article-Button-play"
      >
        <View
          style={
            Object {
              "height": 32,
              "position": "absolute",
              "width": 32,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "borderRadius": 32,
                  "elevation": 1,
                  "height": 32,
                  "justifyContent": "center",
                  "shadowColor": "#000000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.2,
                  "shadowRadius": 1,
                  "width": 32,
                },
                null,
              ]
            }
            testID="Article-PlayIcon-view"
          >
            <ActivityIndicator
              animating={true}
              color="#000"
              hidesWhenStopped={true}
              size="small"
              testID="Article-PlayIcon-ActivityIndicator"
            />
          </View>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#AAAAAA",
            "fontSize": 12,
            "fontWeight": "300",
            "marginTop": 6,
            "textAlign": "center",
          }
        }
        testID="Article-duration"
      >
        ? min.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Article minimal rendering should render minimal correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "padding": 16,
      },
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "opacity": 1,
        }
      }
      testID="Article-Button-section"
    >
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flexDirection": "row",
            "height": 14,
          }
        }
      >
        <View
          style={
            Object {
              "flexBasis": "auto",
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#AAAAAA",
                "fontSize": 12,
                "fontWeight": "300",
                "paddingRight": 0,
              }
            }
            testID="Article-source-name"
          >
            www.google.nl
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexBasis": "auto",
            "flexGrow": 0,
            "marginBottom": 6,
            "marginTop": 6,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={3}
          style={
            Object {
              "color": "#000000",
              "fontSize": 17,
              "fontWeight": "600",
              "lineHeight": 21,
            }
          }
          testID="Article-title"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flex": 1,
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexGrow": 0,
            "flexShrink": 1,
            "height": 14,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "width": 35,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-PlayIcon-Icon-playable"
          >
            
          </Text>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-icon-downloaded"
          >
            
          </Text>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-icon-favorited"
          >
            
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#AAAAAA",
              "fontSize": 12,
              "fontWeight": "300",
              "paddingLeft": 2,
            }
          }
        >
          Added 
          less than a minute
           ago
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginLeft": 16,
          "marginTop": 4,
          "width": 75,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#C5C5C5",
            "borderRadius": 4,
            "height": 75,
            "justifyContent": "center",
            "opacity": 1,
            "width": 75,
          }
        }
        testID="Article-Button-play"
      >
        <View
          style={
            Object {
              "height": 32,
              "position": "absolute",
              "width": 32,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "borderRadius": 32,
                  "elevation": 1,
                  "height": 32,
                  "justifyContent": "center",
                  "shadowColor": "#000000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.2,
                  "shadowRadius": 1,
                  "width": 32,
                },
                null,
              ]
            }
            testID="Article-PlayIcon-view"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#000",
                    "fontSize": 11,
                  },
                  Object {
                    "marginLeft": 2,
                  },
                  Object {
                    "fontFamily": "FontAwesome5Free-Solid",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "900",
                  },
                ]
              }
              testID="Article-PlayIcon-Icon-play"
            >
              
            </Text>
          </View>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#AAAAAA",
            "fontSize": 12,
            "fontWeight": "300",
            "marginTop": 6,
            "textAlign": "center",
          }
        }
        testID="Article-duration"
      >
        ? min.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Article playing rendering should render playing correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "padding": 16,
      },
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "opacity": 1,
        }
      }
      testID="Article-Button-section"
    >
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flexDirection": "row",
            "height": 14,
          }
        }
      >
        <View
          style={
            Object {
              "flexBasis": "auto",
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#AAAAAA",
                "fontSize": 12,
                "fontWeight": "300",
                "paddingRight": 0,
              }
            }
            testID="Article-source-name"
          >
            www.google.nl
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexBasis": "auto",
            "flexGrow": 0,
            "marginBottom": 6,
            "marginTop": 6,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={3}
          style={
            Object {
              "color": "#000000",
              "fontSize": 17,
              "fontWeight": "600",
              "lineHeight": 21,
            }
          }
          testID="Article-title"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flex": 1,
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexGrow": 0,
            "flexShrink": 1,
            "height": 14,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "width": 35,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-PlayIcon-Icon-playable"
          >
            
          </Text>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-icon-downloaded"
          >
            
          </Text>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#ddd",
                  "fontSize": 8,
                },
                Object {
                  "marginRight": 4,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="Article-icon-favorited"
          >
            
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#AAAAAA",
              "fontSize": 12,
              "fontWeight": "300",
              "paddingLeft": 2,
            }
          }
        >
          Added 
          less than a minute
           ago
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginLeft": 16,
          "marginTop": 4,
          "width": 75,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#C5C5C5",
            "borderRadius": 4,
            "height": 75,
            "justifyContent": "center",
            "opacity": 1,
            "width": 75,
          }
        }
        testID="Article-Button-play"
      >
        <View
          style={
            Object {
              "height": 32,
              "position": "absolute",
              "width": 32,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "borderRadius": 32,
                  "elevation": 1,
                  "height": 32,
                  "justifyContent": "center",
                  "shadowColor": "#000000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.2,
                  "shadowRadius": 1,
                  "width": 32,
                },
                Object {
                  "backgroundColor": "#037DE2",
                },
              ]
            }
            testID="Article-PlayIcon-view"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#fff",
                    "fontSize": 11,
                  },
                  undefined,
                  Object {
                    "fontFamily": "FontAwesome5Free-Solid",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "900",
                  },
                ]
              }
              testID="Article-PlayIcon-Icon-pause"
            >
              
            </Text>
          </View>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#AAAAAA",
            "fontSize": 12,
            "fontWeight": "300",
            "marginTop": 6,
            "textAlign": "center",
          }
        }
        testID="Article-duration"
      >
        ? min.
      </Text>
    </View>
  </View>
</View>
`;
